--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multer-cloud-storage",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "Multer storage engine for Google Cloud Storage",
   "main": "lib/index.js",
   "typings": "lib/index",
@@ -20,7 +20,7 @@
     "cloud",
     "storage"
   ],
-  "author": "Alexandre Steinberg",
+  "author": "Zero Cho",
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^5.8.5",
